Regester Login added

--- a/test/fixtures/words.yml
+++ b/test/fixtures/words.yml
@@ -3,7 +3,9 @@
 one:
   word: MyString
   definition: MyString
-
+  notice: MyString
 two:
   word: MyString
   definition: MyString
+  notice: MyString
+
